# gsmtasks

./: .gitignore  Changelog.md  License.txt  README.md  errata.yaml  pyproject.toml
errata/: global_responses.yaml  lapidary.yaml
errata/fixes/: account_role.yaml  documents_create.yaml  error_responses.yaml  file_upload_create.yaml  servers.yaml  tasks_list.yaml
gsm_tasks_project_api_client/: __init__.py  client.py
gsm_tasks_project_api_client/api/account_roles/: account_roles_create.py  account_roles_destroy.py  account_roles_list.py  account_roles_notify_create.py  account_roles_partial_update.py  account_roles_retrieve.py  account_roles_token_retrieve.py  account_roles_update.py
gsm_tasks_project_api_client/api/accounts/: accounts_braintree_customer_retrieve.py  accounts_list.py  accounts_managers_create.py  accounts_managers_destroy.py  accounts_managers_retrieve.py  accounts_partial_update.py  accounts_retrieve.py  accounts_stripe_attach_payment_method_update.py  accounts_stripe_create_setup_intent_update.py  accounts_stripe_detach_payment_method_update.py  accounts_stripe_get_payment_method_retrieve.py  accounts_stripe_get_setup_attempt_retrieve.py  accounts_stripe_get_setup_intent_retrieve.py  accounts_stripe_payment_methods_retrieve.py  accounts_stripe_set_default_payment_method_update.py  accounts_stripe_setup_intents_retrieve.py  accounts_update.py  accounts_workers_create.py  accounts_workers_destroy.py  accounts_workers_retrieve.py
gsm_tasks_project_api_client/api/addons/: addons_list.py  addons_retrieve.py
gsm_tasks_project_api_client/api/authenticate/: authenticate_create.py
gsm_tasks_project_api_client/api/billing/: billing_customers_client_token_retrieve.py  (+14 more)
gsm_tasks_project_api_client/models/: __init__.py  account.py  account_billing_method_enum.py  account_default_task_duration.py  account_role.py  account_role_state_enum.py  account_roles_create_format.py  account_roles_destroy_format.py  account_roles_list_format.py  account_roles_list_state.py  account_roles_notify_create_format.py  account_roles_partial_update_format.py  account_roles_retrieve_format.py  account_roles_token_retrieve_format.py  account_roles_update_format.py  account_rotate_assignee.py  account_stripe_payment_method_attach.py  account_stripe_payment_method_detach.py  account_stripe_payment_method_get.py  account_stripe_payment_method_set_default.py  account_stripe_payment_methods.py  account_stripe_setup_attempt_get.py  account_stripe_setup_intent_create.py  account_stripe_setup_intent_get.py  account_stripe_setup_intents_get.py  account_task_expiry_duration.py  account_user.py  accounts_braintree_customer_retrieve_format.py  accounts_list_format.py  accounts_managers_create_format.py  accounts_managers_destroy_format.py  accounts_managers_retrieve_format.py  accounts_partial_update_format.py  accounts_retrieve_format.py  accounts_stripe_attach_payment_method_update_format.py  accounts_stripe_create_setup_intent_update_format.py  accounts_stripe_detach_payment_method_update_format.py  accounts_stripe_get_payment_method_retrieve_format.py  accounts_stripe_get_setup_attempt_retrieve_format.py  accounts_stripe_get_setup_intent_retrieve_format.py  (+455 more)
lapidary/openapi/: openapi.yaml  patch.js
plugins/: schema.py
src/gsmtasks/: client.py
src/patches/: param_names.yaml
tests/: client_test.py  test_client.py  test_client2.py  test_paging.py  test_validation_error.py
(+400 files in other folders)
