[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "gsmtasks-client"
description = "Client library for https://api.gsmtasks.com/ ."
version = "0.4.0"
authors = []
license = "0BSD"
packages = [
    { include = 'gsmtasks', from = "src/python" },
    { include = 'gsmtasks', from = "gen" },
]
include = [
    'gen/**/*',
    'src/python/**/*'
]
repository = 'https://github.com/lapidary-library/gsmtasks'

[tool.poetry.dependencies]
python = "^3.9"
lapidary = "~0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.20.3"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src/python",
    "gen",
]

[tool.lapidary]
document_path = 'src/openapi/openapi.yaml'
origin = 'https://api.gsmtasks.com/docs/schema/'
package = 'gsmtasks'
patches = 'src/openapi/patches'

[tool.taskipy.tasks]
update = 'lapidary render'
test = 'pytest -s'

[tool.mypy]
mypy_path = ['src/python', 'gen', 'tests']
namespace_packages = true
packages = ['gsmtasks']
