[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "gsmtasks-client"
description = "Client library for https://api.gsmtasks.com/ ."
version = "0.5.0"
authors = []
license = "0BSD"
packages = [
    { include = 'gsmtasks', from = "src" },
]

repository = 'https://github.com/lapidary-library/gsmtasks'

[tool.poetry.dependencies]
python = "^3.10"
lapidary = {git = "https://github.com/python-lapidary/lapidary", rev = "develop"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.lapidary]
document_path = 'lapidary/openapi/openapi.yaml'
origin = 'https://api.gsmtasks.com/docs/schema/'
package = 'gsmtasks'

[tool.mypy]
namespace_packages = true
packages = ['gsmtasks']

[tool.ruff]
target-version = "py39"
extend-exclude = [
    "tests/e2e",
]
line-length = 120
namespace-packages = ["lapidary/render"]
src = ["src"]

[tool.ruff.lint]
extend-select = ['I', 'UP']
extend-ignore = [
    'F401', 'F403', 'F405',
    'UP040', 'UP008',
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true
